src/demo/index.scss
.demo-page {
  &__html, &__body {
    max-width: 1920px;
    min-width: 320px;
    margin: 0 auto;
    padding: 0;
    background-color: #fff;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 14px;
    color: #000;
  }

  &__container {
    display: flex;
    flex-flow: column wrap;
    justify-content: center;
    align-items: center;
    width: 100%;
    box-sizing: border-box;
  }

  &__double-slider-container,
  &__single-slider-container,
  &__vertical-slider-container,
  &__default-slider-container {
    display: flex;
    flex-flow: column wrap;
    justify-content: center;
    align-items: center;
    width: 100%;
    margin-top: 25px;
    box-sizing: border-box;
  }

  &__subtitle {
    margin: 0;
    font-weight: normal;
  }

  &__double-slider-wrapper {
    width: 500px;
    height: 6px;
    margin: 100px 0;
  }

  &__single-slider-wrapper {
    width: 80%;
    height: 6px;
    margin: 100px 0;
  }

  &__vertical-slider-wrapper {
    width: 500px;
    height: 6px;
    margin: 100px 0;
  }

  &__default-slider-wrapper {
    width: 650px;
    height: 6px;
    margin: 100px 0;
  }

  &__panel {
    width: 100%;
  }

  &__panel-text-inputs-container,
  &__panel-toggle-inputs-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    width: 100%;
    margin-bottom: 10px;
  }

  &__panel-vertical-input,
  &__panel-tooltip-input,
  &__panel-range-input,
  &__panel-scale-input
  {
    margin: 5px;
    box-sizing: border-box;
  }

  &__panel-input-container {
    display: flex;
    margin: 5px;
  }

  &__panel-min-input,
  &__panel-max-input,
  &__panel-from-input,
  &__panel-to-input,
  &__panel-step-input
  {
    width: 65px;
    height: 26px;
    border: 2px solid rgb(47 50 53);
    border-radius: 0 4px 4px 0;
    font-size: 18px;
    box-sizing: border-box;
    z-index: 1;
    outline: none;
  }

  &__panel-min-input:focus,
  &__panel-max-input:focus,
  &__panel-from-input:focus,
  &__panel-to-input:focus,
  &__panel-step-input:focus
  {
    border: 3px solid rgb(47 50 53);
  }

  &__panel-min,
  &__panel-max,
  &__panel-from,
  &__panel-to,
  &__panel-step {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 45px;
    height: 26px;
    background-color: rgb(47 50 53);
    border-radius: 4px 0 0 4px;
    border: none;
    color: #fff;
    font-size: 12px;
    font-weight: bold;
    box-sizing: border-box;
    z-index: 2;
  }

  &__panel-toggle-label {
    position: relative;
    display: flex;
    align-items: center;
    margin-right: 12px;
    line-height: 24px;
    font-size: 14px;
    cursor: pointer;
  }

  &__panel-toggle-label:last-child {
    margin: 0;
  }

  &__panel-toggle-text {
    padding-left: 40px;
    font-family: Arial, Helvetica, sans-serif;
  }

  &__panel-input {
    appearance: none;
  }

  &__panel-custom-toggle {
    position: absolute;
    display: flex;
    align-items: center;
    width: 38px;
    height: 18px;
    background-color: #fff;
    border: 1px solid rgb(47 50 53);
    opacity: 0.5;
    border-radius: 10px;
    box-sizing: content-box;
    z-index: 1;
  }

  &__panel-custom-toggle::after {
    position: absolute;
    content: '';
    width: 12px;
    height: 12px;
    margin: 0 3px;
    background: rgb(47 50 53);
    border-radius: 10px;
    transition: .4s;
  }

  &__panel-input:checked ~ &__panel-custom-toggle {
    opacity: 1;
  }

  &__panel-input:checked ~ &__panel-toggle-text {
    opacity: 1;
  }

  &__panel-input:checked + &__panel-custom-toggle::after {
    transform: translateX(20px);
  }

  &__panel-input:focus ~ &__panel-custom-toggle {
    outline: auto;
  }

  @media (hover: none) and (pointer: coarse) {
    &__panel-min,
    &__panel-max,
    &__panel-from,
    &__panel-to,
    &__panel-step,
    &__panel-custom-toggle {
      cursor: auto;
    }
  }
}

